--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"private"         : false,
 	"version"         : "1.0.0",
 	"license"         : "GPL-2.0-or-later",
 	"name"            : "@clevercanyon/utilities",
