--- a/.gitignore
+++ b/.gitignore
@@ -60,9 +60,6 @@ typings/
 
 # NPM & Yarn
 
-.npmrc
-.yarnrc
-
 .yarn/*
 !.yarn/cache
 !.yarn/patches
@@ -109,6 +106,7 @@ bower_components/
 
 .git/
 .git-dir/
+.gitconfig
 
 .svn/
 _svn/
@@ -151,13 +149,3 @@ Temporary Items
 Icon?
 !Icons
 ._*
-
-# Specifics
-
-/dev/.libs/docker/wp/.env
-/dev/.libs/docker/wp/.compose~sym.yml
-
-# For projects with a `wp-website|wp-network` layout, we want these.
-
-!/wp-includes/**/vendor/
-!/wp-content/**/vendor/
