--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
+access=public
 engine-strict=true
 //registry.npmjs.org/:_authToken=${C10N_NPM_TOKEN}
 //npm.pkg.github.com/:_authToken=${C10N_GITHUB_TOKEN}
