--- a/.npmrc
+++ b/.npmrc
@@ -8,8 +8,10 @@
 # Only `<custom:start.../custom:end>` will be preserved below.
 ##
 
-access=public
+access=restricted
 engine-strict=true
+
+@clevercanyon:registry=https://npm.pkg.github.com
 //registry.npmjs.org/:_authToken=${C10N_NPM_TOKEN}
 //npm.pkg.github.com/:_authToken=${C10N_GITHUB_TOKEN}
 
