--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
         "dotfiles:update": "./dev/.files/bin/update.js"
     },
     "workspaces": [],
-    "publishConfig": {},
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com"
+    },
     "config": {
         "c10n": {
             "&": {
