--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,7 +12,7 @@ compatibility_flags = ["global_navigator"]
 
 main = "./dst/index.js"
 build = { command = "npm run build:prod" }
-vars = { IS_C10N = "cf=prod&cf-worker=prod" }
+vars = { IS_C10N = "cf=prod&cfw=prod" }
 account_id = "f1176464a976947aa5665d989814a4b1"
 
 ##
@@ -26,4 +26,4 @@ routes = ["clevercanyon.skeleton/*"]
 
 [env.dev]
 workers_dev = true
-vars = { IS_C10N = "cf=dev&cf-worker=dev" }
+vars = { IS_C10N = "cf=dev&cfw=dev" }
