--- a/package.json
+++ b/package.json
@@ -8,18 +8,14 @@
 	"homepage": "https://github.com/clevercanyon/utilities#readme",
 	"bugs": "https://github.com/clevercanyon/utilities/issues",
 	"funding": "https://github.com/sponsors/clevercanyon",
-	"keywords": [
-		"clevercanyon"
-	],
+	"keywords": ["clevercanyon"],
 	"author": {
 		"name": "Clever Canyon",
 		"url": "https://clevercanyon.com"
 	},
 	"contributors": [],
 	"type": "module",
-	"files": [
-		"/dist"
-	],
+	"files": ["/dist"],
 	"bin": {},
 	"imports": {},
 	"exports": {
@@ -28,10 +24,7 @@
 			"require": "./dist/index.cjs"
 		}
 	},
-	"sideEffects": [
-		"./src/*.scss",
-		"./src/index.*"
-	],
+	"sideEffects": ["./src/*.scss", "./src/index.*"],
 	"module": "./dist/index.js",
 	"main": "./dist/index.cjs",
 	"unpkg": "./dist/index.js",
@@ -57,14 +50,8 @@
 		"@types/node": "^18.11.9"
 	},
 	"overrides": {},
-	"cpu": [
-		"x64",
-		"arm64"
-	],
-	"os": [
-		"darwin",
-		"linux"
-	],
+	"cpu": ["x64", "arm64"],
+	"os": ["darwin", "linux"],
 	"engines": {
 		"node": "^19.2.0",
 		"npm": "^8.19.3"
@@ -72,9 +59,9 @@
 	"scripts": {
 		"preview": "npx vite preview",
 		"dev": "npx vite dev --mode=dev",
-		"build:dev": "npx tsc && npx vite build --mode=dev",
-		"build:stage": "npx tsc && npx vite build --mode=stage",
-		"build:prod": "npx tsc && npx vite build --mode=prod",
+		"build:dev": "npx vite build --mode=dev && npx tsc",
+		"build:stage": "npx vite build --mode=stage && npx tsc",
+		"build:prod": "npx vite build --mode=prod && npx tsc",
 		"dotfiles:update": "./dev/.files/bin/update.js"
 	},
 	"workspaces": [],
