--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,20 +1,20 @@
 ##
 # Browserslist config file.
 #
-# @note Many packages are aware of this config file's location.
+# Many packages are aware of this config file's location.
 #
 # @note CUSTOM EDITS ONLY PLEASE!
-# In the future this file will be updated automatically.
-# Only `<custom:start.../custom:end>` will be preserved below.
+# @note In the future this file will be updated automatically.
+# @note Only `<custom:start.../custom:end>` will be preserved below.
 #
-# @note Generated using <https://www.npmjs.com/package/browserslist-generator>.
+# Generated using <https://www.npmjs.com/package/browserslist-generator>.
 #
-# 	import BLG from 'browserslist-generator';
-# 	console.log( BLG.browsersWithSupportForEcmaVersion( 'es2021' ).join( '\n' ) );
+#     import BLG from 'browserslist-generator';
+#     console.log( BLG.browsersWithSupportForEcmaVersion( 'es2021' ).join( '\n' ) );
 #
-# @note Review BLG source: <https://o5p.me/4DC1Vq>.
-# @note Review browserlist report on production config: <https://o5p.me/Fvs3WP>.
-# @note Review our transpiler: <https://esbuild.github.io/content-types/#javascript>.
+# - Review BLG source: <https://o5p.me/4DC1Vq>.
+# - Review browserlist report on production config: <https://o5p.me/Fvs3WP>.
+# - Review our transpiler: <https://esbuild.github.io/content-types/#javascript>.
 ##
 
 [production]
