--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"private": false,
-	"version": "1.0.35",
+	"version": "1.0.36",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Another great project by Clever Canyon.",
@@ -8,14 +8,18 @@
 	"homepage": "https://github.com/clevercanyon/utilities#readme",
 	"bugs": "https://github.com/clevercanyon/utilities/issues",
 	"funding": "https://github.com/sponsors/clevercanyon",
-	"keywords": ["clevercanyon"],
+	"keywords": [
+		"clevercanyon"
+	],
 	"author": {
 		"name": "Clever Canyon",
 		"url": "https://clevercanyon.com"
 	},
 	"contributors": [],
 	"type": "module",
-	"files": ["/dist"],
+	"files": [
+		"/dist"
+	],
 	"bin": {},
 	"imports": {},
 	"exports": {
@@ -70,7 +74,9 @@
 			"types": "./dist/types/url.d.ts"
 		}
 	},
-	"sideEffects": ["./src/*.{html,scss,css,tsx,ts,jsx,mjs,js}"],
+	"sideEffects": [
+		"./src/*.{html,scss,css,tsx,ts,jsx,mjs,js}"
+	],
 	"module": "./dist/index.js",
 	"main": "./dist/index.cjs",
 	"browser": "",
@@ -78,7 +84,9 @@
 	"types": "./dist/types/index.d.ts",
 	"typesVersions": {
 		">=3.1": {
-			"./*": ["./dist/types/*"]
+			"./*": [
+				"./dist/types/*"
+			]
 		}
 	},
 	"peerDependencies": {
@@ -99,8 +107,14 @@
 		"@types/node": "^18.11.9"
 	},
 	"overrides": {},
-	"cpu": ["x64", "arm64"],
-	"os": ["darwin", "linux"],
+	"cpu": [
+		"x64",
+		"arm64"
+	],
+	"os": [
+		"darwin",
+		"linux"
+	],
 	"engines": {
 		"node": "^19.2.0",
 		"npm": "^8.19.3"
