--- a/package.json
+++ b/package.json
@@ -1,179 +1,193 @@
 {
-	"private": false,
-	"publishConfig": {
-		"access": "restricted"
-	},
-	"version": "1.0.65",
-	"license": "GPL-3.0-or-later",
-	"name": "@clevercanyon/utilities",
-	"description": "Another great project by Clever Canyon.",
-	"repository": "https://github.com/clevercanyon/utilities",
-	"homepage": "https://github.com/clevercanyon/utilities#readme",
-	"bugs": "https://github.com/clevercanyon/utilities/issues",
-	"funding": "https://github.com/sponsors/clevercanyon",
-	"keywords": ["clevercanyon"],
-	"author": {
-		"name": "Clever Canyon",
-		"url": "https://clevercanyon.com"
-	},
-	"contributors": [],
-	"type": "module",
-	"files": ["/dist"],
-	"bin": {},
-	"imports": {},
-	"exports": {
-		".": {
-			"import": "./dist/index.js",
-			"require": "./dist/index.cjs",
-			"types": "./dist/types/index.d.ts"
-		},
-		"./brand": {
-			"import": "./dist/brand.js",
-			"require": "./dist/brand.cjs",
-			"types": "./dist/types/brand.d.ts"
-		},
-		"./cookie": {
-			"import": "./dist/cookie.js",
-			"require": "./dist/cookie.cjs",
-			"types": "./dist/types/cookie.d.ts"
-		},
-		"./crypto": {
-			"import": "./dist/crypto.js",
-			"require": "./dist/crypto.cjs",
-			"types": "./dist/types/crypto.d.ts"
-		},
-		"./env": {
-			"import": "./dist/env.js",
-			"require": "./dist/env.cjs",
-			"types": "./dist/types/env.d.ts"
-		},
-		"./http": {
-			"import": "./dist/http.js",
-			"require": "./dist/http.cjs",
-			"types": "./dist/types/http.d.ts"
-		},
-		"./obj": {
-			"import": "./dist/obj.js",
-			"require": "./dist/obj.cjs",
-			"types": "./dist/types/obj.d.ts"
-		},
-		"./react": {
-			"import": "./dist/react.js",
-			"require": "./dist/react.cjs",
-			"types": "./dist/types/react.d.ts"
-		},
-		"./str": {
-			"import": "./dist/str.js",
-			"require": "./dist/str.cjs",
-			"types": "./dist/types/str.d.ts"
-		},
-		"./time": {
-			"import": "./dist/time.js",
-			"require": "./dist/time.cjs",
-			"types": "./dist/types/time.d.ts"
-		},
-		"./url": {
-			"import": "./dist/url.js",
-			"require": "./dist/url.cjs",
-			"types": "./dist/types/url.d.ts"
-		}
-	},
-	"sideEffects": ["./src/*.{html,scss,css,tsx,ts,jsx,mjs,js}"],
-	"module": "./dist/index.js",
-	"main": "./dist/index.cjs",
-	"browser": "",
-	"unpkg": "./dist/index.js",
-	"types": "./dist/types/index.d.ts",
-	"typesVersions": {
-		">=3.1": {
-			"./*": ["./dist/types/*"]
-		}
-	},
-	"peerDependencies": {
-		"crypto-js": "^4.1.1",
-		"ignore": "^5.2.4",
-		"locutus": "^2.0.16",
-		"lodash": "^4.17.21",
-		"micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.9",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	},
-	"peerDependenciesMeta": {},
-	"devDependencies": {
-		"@clevercanyon/skeleton-dev-deps": "^1.0.63",
-		"@cloudflare/workers-types": "^4.20221111.1",
-		"@types/crypto-js": "^4.1.1",
-		"@types/locutus": "^0.0.6",
-		"@types/lodash": "^4.14.191",
-		"@types/micromatch": "^4.0.2",
-		"@types/node": "^18.11.18",
-		"@types/react": "^18.0.26",
-		"@types/react-dom": "^18.0.10"
-	},
-	"overrides": {},
-	"cpu": ["x64", "arm64"],
-	"os": ["darwin", "linux"],
-	"engines": {
-		"node": "^19.2.0",
-		"npm": "^8.19.3"
-	},
-	"scripts": {
-		"dev:": "npx vite dev",
-		"dev:help": "npx vite dev --help",
-		"dev:mode": "npx vite dev --mode=dev",
-		"preview:": "npx vite preview",
-		"preview:help": "npx vite preview --help",
-		"preview:dev": "npx vite preview --mode=dev",
-		"build:": "npx vite build",
-		"build:help": "npx vite build --help",
-		"build:dev": "npx vite build --mode=dev",
-		"build:ci": "npx vite build --mode=ci",
-		"build:stage": "npx vite build --mode=stage",
-		"build:prod": "npx vite build --mode=prod",
-		"postbuild:": "npx tsc --emitDeclarationOnly",
-		"postbuild:dev": "npx tsc --emitDeclarationOnly",
-		"postbuild:ci": "npx tsc --emitDeclarationOnly",
-		"postbuild:stage": "npx tsc --emitDeclarationOnly",
-		"postbuild:prod": "npx tsc --emitDeclarationOnly",
-		"envs:": "./dev/.files/bin/envs.js",
-		"envs:help": "./dev/.files/bin/envs.js --help",
-		"envs:push": "./dev/.files/bin/envs.js push",
-		"envs:pull": "./dev/.files/bin/envs.js pull",
-		"envs:keys": "./dev/.files/bin/envs.js keys",
-		"envs:encrypt": "./dev/.files/bin/envs.js encrypt",
-		"envs:decrypt": "./dev/.files/bin/envs.js decrypt",
-		"envs:setup": "./dev/.files/bin/envs.js setup",
-		"envs:setup:new": "./dev/.files/bin/envs.js setup --new",
-		"install:": "./dev/.files/bin/bash/npm-2sp.bash 'npm ci' './dev/.files/bin/install.js'",
-		"install:help": "./dev/.files/bin/bash/npm-2sp.bash 'npm ci' './dev/.files/bin/install.js --help'",
-		"install:project": "./dev/.files/bin/bash/npm-2sp.bash 'npm ci' './dev/.files/bin/install.js project'",
-		"update:": "./dev/.files/bin/update.js",
-		"update:help": "./dev/.files/bin/update.js --help",
-		"update:dotfiles": "./dev/.files/bin/update.js dotfiles",
-		"update:project": "./dev/.files/bin/bash/npm-2sp.bash 'npm run update:dotfiles' './dev/.files/bin/update.js project'",
-		"update:project:repos": "./dev/.files/bin/bash/npm-2sp.bash 'npm run update:dotfiles' './dev/.files/bin/update.js project --repos'",
-		"update:project:repos:pkgs": "./dev/.files/bin/bash/npm-2sp.bash 'npm run update:dotfiles' './dev/.files/bin/update.js project --repos --pkgs'",
-		"update:projects::": "./dev/.files/bin/update.js projects",
-		"update:projects::help": "./dev/.files/bin/update.js projects --help",
-		"update:projects::dotfiles": "./dev/.files/bin/update.js projects --run update:dotfiles",
-		"update:projects::project": "./dev/.files/bin/update.js projects --run update:project",
-		"update:projects::project:repos": "./dev/.files/bin/update.js projects --run update:project:repos",
-		"update:projects::project:repos:pkgs": "./dev/.files/bin/update.js projects --run update:project:repos:pkgs",
-		"wrangler:": "CLOUDFLARE_API_TOKEN=${C10N_CLOUDFLARE_TOKEN} npx wrangler",
-		"wrangler:help": "CLOUDFLARE_API_TOKEN=${C10N_CLOUDFLARE_TOKEN} npx wrangler --help"
-	},
-	"workspaces": [],
-	"config": {
-		"c10n": {
-			"&": {
-				"dotfiles": {
-					"lock": []
-				},
-				"build": {
-					"appType": "cma",
-					"targetEnv": "any"
-				}
-			}
-		}
-	}
+    "private": false,
+    "publishConfig": {
+        "access": "restricted"
+    },
+    "version": "1.0.65",
+    "license": "GPL-3.0-or-later",
+    "name": "@clevercanyon/utilities",
+    "description": "Another great project by Clever Canyon.",
+    "repository": "https://github.com/clevercanyon/utilities",
+    "homepage": "https://github.com/clevercanyon/utilities#readme",
+    "bugs": "https://github.com/clevercanyon/utilities/issues",
+    "funding": "https://github.com/sponsors/clevercanyon",
+    "keywords": [
+        "clevercanyon"
+    ],
+    "author": {
+        "name": "Clever Canyon",
+        "url": "https://clevercanyon.com"
+    },
+    "contributors": [],
+    "type": "module",
+    "files": [
+        "/dist"
+    ],
+    "bin": {},
+    "imports": {},
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs",
+            "types": "./dist/types/index.d.ts"
+        },
+        "./brand": {
+            "import": "./dist/brand.js",
+            "require": "./dist/brand.cjs",
+            "types": "./dist/types/brand.d.ts"
+        },
+        "./cookie": {
+            "import": "./dist/cookie.js",
+            "require": "./dist/cookie.cjs",
+            "types": "./dist/types/cookie.d.ts"
+        },
+        "./crypto": {
+            "import": "./dist/crypto.js",
+            "require": "./dist/crypto.cjs",
+            "types": "./dist/types/crypto.d.ts"
+        },
+        "./env": {
+            "import": "./dist/env.js",
+            "require": "./dist/env.cjs",
+            "types": "./dist/types/env.d.ts"
+        },
+        "./http": {
+            "import": "./dist/http.js",
+            "require": "./dist/http.cjs",
+            "types": "./dist/types/http.d.ts"
+        },
+        "./obj": {
+            "import": "./dist/obj.js",
+            "require": "./dist/obj.cjs",
+            "types": "./dist/types/obj.d.ts"
+        },
+        "./react": {
+            "import": "./dist/react.js",
+            "require": "./dist/react.cjs",
+            "types": "./dist/types/react.d.ts"
+        },
+        "./str": {
+            "import": "./dist/str.js",
+            "require": "./dist/str.cjs",
+            "types": "./dist/types/str.d.ts"
+        },
+        "./time": {
+            "import": "./dist/time.js",
+            "require": "./dist/time.cjs",
+            "types": "./dist/types/time.d.ts"
+        },
+        "./url": {
+            "import": "./dist/url.js",
+            "require": "./dist/url.cjs",
+            "types": "./dist/types/url.d.ts"
+        }
+    },
+    "sideEffects": [
+        "./src/*.{html,scss,css,tsx,ts,jsx,mjs,js}"
+    ],
+    "module": "./dist/index.js",
+    "main": "./dist/index.cjs",
+    "browser": "",
+    "unpkg": "./dist/index.js",
+    "types": "./dist/types/index.d.ts",
+    "typesVersions": {
+        ">=3.1": {
+            "./*": [
+                "./dist/types/*"
+            ]
+        }
+    },
+    "peerDependencies": {
+        "crypto-js": "^4.1.1",
+        "ignore": "^5.2.4",
+        "locutus": "^2.0.16",
+        "lodash": "^4.17.21",
+        "micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.9",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "peerDependenciesMeta": {},
+    "devDependencies": {
+        "@clevercanyon/skeleton-dev-deps": "^1.0.63",
+        "@cloudflare/workers-types": "^4.20221111.1",
+        "@types/crypto-js": "^4.1.1",
+        "@types/locutus": "^0.0.6",
+        "@types/lodash": "^4.14.191",
+        "@types/micromatch": "^4.0.2",
+        "@types/node": "^18.11.18",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.10"
+    },
+    "overrides": {},
+    "cpu": [
+        "x64",
+        "arm64"
+    ],
+    "os": [
+        "darwin",
+        "linux"
+    ],
+    "engines": {
+        "node": "^19.2.0",
+        "npm": "^8.19.3"
+    },
+    "scripts": {
+        "dev:": "npx vite dev",
+        "dev:help": "npx vite dev --help",
+        "dev:mode": "npx vite dev --mode=dev",
+        "preview:": "npx vite preview",
+        "preview:help": "npx vite preview --help",
+        "preview:dev": "npx vite preview --mode=dev",
+        "build:": "npx vite build",
+        "build:help": "npx vite build --help",
+        "build:dev": "npx vite build --mode=dev",
+        "build:ci": "npx vite build --mode=ci",
+        "build:stage": "npx vite build --mode=stage",
+        "build:prod": "npx vite build --mode=prod",
+        "postbuild:": "npx tsc --emitDeclarationOnly",
+        "postbuild:dev": "npx tsc --emitDeclarationOnly",
+        "postbuild:ci": "npx tsc --emitDeclarationOnly",
+        "postbuild:stage": "npx tsc --emitDeclarationOnly",
+        "postbuild:prod": "npx tsc --emitDeclarationOnly",
+        "envs:": "./dev/.files/bin/envs.js",
+        "envs:help": "./dev/.files/bin/envs.js --help",
+        "envs:push": "./dev/.files/bin/envs.js push",
+        "envs:pull": "./dev/.files/bin/envs.js pull",
+        "envs:keys": "./dev/.files/bin/envs.js keys",
+        "envs:encrypt": "./dev/.files/bin/envs.js encrypt",
+        "envs:decrypt": "./dev/.files/bin/envs.js decrypt",
+        "envs:setup": "./dev/.files/bin/envs.js setup",
+        "envs:setup:new": "./dev/.files/bin/envs.js setup --new",
+        "install:": "./dev/.files/bin/bash/npm-2sp.bash 'npm ci' './dev/.files/bin/install.js'",
+        "install:help": "./dev/.files/bin/bash/npm-2sp.bash 'npm ci' './dev/.files/bin/install.js --help'",
+        "install:project": "./dev/.files/bin/bash/npm-2sp.bash 'npm ci' './dev/.files/bin/install.js project'",
+        "update:": "./dev/.files/bin/update.js",
+        "update:help": "./dev/.files/bin/update.js --help",
+        "update:dotfiles": "./dev/.files/bin/update.js dotfiles",
+        "update:project": "./dev/.files/bin/bash/npm-2sp.bash 'npm run update:dotfiles' './dev/.files/bin/update.js project'",
+        "update:project:repos": "./dev/.files/bin/bash/npm-2sp.bash 'npm run update:dotfiles' './dev/.files/bin/update.js project --repos'",
+        "update:project:repos:pkgs": "./dev/.files/bin/bash/npm-2sp.bash 'npm run update:dotfiles' './dev/.files/bin/update.js project --repos --pkgs'",
+        "update:projects::": "./dev/.files/bin/update.js projects",
+        "update:projects::help": "./dev/.files/bin/update.js projects --help",
+        "update:projects::dotfiles": "./dev/.files/bin/update.js projects --run update:dotfiles",
+        "update:projects::project": "./dev/.files/bin/update.js projects --run update:project",
+        "update:projects::project:repos": "./dev/.files/bin/update.js projects --run update:project:repos",
+        "update:projects::project:repos:pkgs": "./dev/.files/bin/update.js projects --run update:project:repos:pkgs",
+        "wrangler:": "CLOUDFLARE_API_TOKEN=${C10N_CLOUDFLARE_TOKEN} npx wrangler",
+        "wrangler:help": "CLOUDFLARE_API_TOKEN=${C10N_CLOUDFLARE_TOKEN} npx wrangler --help"
+    },
+    "workspaces": [],
+    "config": {
+        "c10n": {
+            "&": {
+                "dotfiles": {
+                    "lock": []
+                },
+                "build": {
+                    "appType": "cma",
+                    "targetEnv": "any"
+                }
+            }
+        }
+    }
 }
