--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "restricted"
 	},
-	"version": "1.0.75",
+	"version": "1.0.76",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Another great project by Clever Canyon.",
@@ -100,7 +100,7 @@
 	},
 	"peerDependenciesMeta": {},
 	"devDependencies": {
-		"@clevercanyon/skeleton-dev-deps": "^1.0.83",
+		"@clevercanyon/skeleton-dev-deps": "^1.0.85",
 		"@cloudflare/workers-types": "^4.20230115.0",
 		"@types/crypto-js": "^4.1.1",
 		"@types/locutus": "^0.0.6",
@@ -133,10 +133,11 @@
 						"engineers": "pull",
 						"architects": "push"
 					},
-					"configVersion": "1.0.0"
+					"configVersion": "1.0.1",
+					"labels": {}
 				},
 				"npmjs": {
-					"configVersions": "1.0.0,1.0.0"
+					"configVersions": "1.0.1,1.0.0"
 				}
 			}
 		}
