--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "restricted"
 	},
-	"version": "1.0.83",
+	"version": "1.0.84",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Utilities for JavaScript apps running in any environment.",
@@ -76,6 +76,11 @@
 			"import": "./dist/url.js",
 			"require": "./dist/url.cjs",
 			"types": "./dist/types/url.d.ts"
+		},
+		"./mm": {
+			"import": "./dist/mm.js",
+			"require": "./dist/mm.cjs",
+			"types": "./dist/types/mm.d.ts"
 		}
 	},
 	"sideEffects": ["./src/*.{html,scss,ts,tsx}"],
@@ -103,7 +108,7 @@
 	"optionalDependencies": {},
 	"bundleDependencies": [],
 	"devDependencies": {
-		"@clevercanyon/skeleton-dev-deps": "^1.0.103",
+		"@clevercanyon/skeleton-dev-deps": "^1.0.104",
 		"@cloudflare/workers-types": "^4.20230115.0",
 		"@types/crypto-js": "^4.1.1",
 		"@types/locutus": "^0.0.6",
