--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "restricted"
 	},
-	"version": "1.0.84",
+	"version": "1.0.85",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Utilities for JavaScript apps running in any environment.",
@@ -100,6 +100,7 @@
 		"ignore": "^5.2.4",
 		"locutus": "^2.0.16",
 		"lodash": "^4.17.21",
+		"merge-change": "npm:@clevercanyon/merge-change.fork@^1.8.24",
 		"micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.19",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
