--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,17 @@
 
 	"compilerOptions": {
 		"lib": ["es2021", "dom"],
-		"types": ["vite/client", "@types/crypto-js", "@types/locutus", "@types/lodash", "@types/micromatch", "@types/node", "@types/react", "@types/react-dom"]
+		"types": [
+			"vite/client",
+			"@cloudflare/workers-types/2022-08-04",
+			"@types/crypto-js",
+			"@types/locutus",
+			"@types/lodash",
+			"@types/micromatch",
+			"@types/node",
+			"@types/react-dom",
+			"@types/react"
+		]
 	}
 	/* </custom:end> */
 }
