--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 # Logs.
 
 *.log
+*.logs
 
 # Backups.
 
@@ -48,10 +49,6 @@
 .vscode
 *.code-search
 *.code-workspace
-
-# NPM.
-
-npm-debug.log
 
 # Dists (must exclude).
 # May contain `APP_` env vars.
@@ -95,6 +92,7 @@ typings
 # Vite.
 
 .vite
+.vitest
 
 # Wrangler.
 
