--- a/.npmignore
+++ b/.npmignore
@@ -25,6 +25,7 @@
 # Logs.
 
 *.log
+*.logs
 
 # Backups.
 
@@ -56,10 +57,6 @@
 .vscode
 *.code-search
 *.code-workspace
-
-# NPM.
-
-npm-debug.log
 
 # Dists (must exclude).
 # May contain `APP_` env vars.
@@ -103,6 +100,7 @@ typings
 # Vite.
 
 .vite
+.vitest
 
 # Wrangler.
 
@@ -204,67 +202,119 @@ Temporary Items
 # These are in addition to what we have in `.gitignore`.
 ##
 
+# Dist (allow).
+
+!dist
+
+# Configs.
+
+.*
+
+*config.*
+!dist/**/*config.*
+
+*.config.*
+!dist/**/*.config.*
+
+wrangler.*
+!dist/**/wrangler.*
+
+# Uncompiled sources.
+
+*.scss
+!dist/**/*.scss
+
+*.less
+!dist/**/*.less
+
+*.ejs
+!dist/**/*.ejs
+
+*.jsx
+!dist/**/*.jsx
+
+*.ts
+!*.d.ts
+!dist/**/*.ts
+
+*.tsx
+!*.d.tsx
+!dist/**/*.tsx
+
+*.cts
+!*.d.cts
+!dist/**/*.cts
+
+*.ctsx
+!*.d.ctsx
+!dist/**/*.ctsx
+
+*.mts
+!*.d.mts
+!dist/**/*.mts
+
+*.mtsx
+!*.d.mtsx
+!dist/**/*.mtsx
+
 # Dev.
 
 dev
+__dev__
 
 # Docs.
 
 doc
 docs
+__doc__
+__docs__
+*.doc.*
+*.docs.*
+*.readme.*
+*.readmes.*
 
 # Tests.
 
 test
 tests
+__test__
+__tests__
+*.test.*
+*.tests.*
+*.test-d.*
+*.tests-d.*
+
+# Specs.
+
+spec
+specs
+__spec__
+__specs__
+*.spec.*
+*.specs.*
+*.spec-d.*
+*.specs-d.*
 
 # Examples.
 
 example
 examples
+__example__
+__examples__
+*.example.*
+*.examples.*
 
 # Benchmarks.
 
 bench
 benchmark
 benchmarks
-
-# Dotenv.
-
-.env.vault
-.env.project
-
-# GitHub.
-
-.github
-
-# Dists.
-
-!dist
-
-# Source.
-
-.*
-__*
-
-*.ts
-*.tsx
-!*.d.ts
-*.jsx
-*.ejs
-
-*.scss
-*.less
-
-*.test.*
-*.spec.*
-*.readme.*
-
-jsconfig.*
-tsconfig.*
-wrangler.*
-vite.config.*
-tailwind.config.*
+__bench__
+__benchmark__
+__benchmarks__
+*.bench.*
+*.benchmark.*
+*.benchmarks.*
 
 ##
 # There are also a few items always included and/or excluded by NPM.
