--- a/package.json
+++ b/package.json
@@ -27,10 +27,20 @@
 			"require": "./dist/index.cjs",
 			"types": "./dist/types/index.d.ts"
 		},
+		"./arr": {
+			"import": "./dist/arr.js",
+			"require": "./dist/arr.cjs",
+			"types": "./dist/types/arr.d.ts"
+		},
 		"./brand": {
 			"import": "./dist/brand.js",
 			"require": "./dist/brand.cjs",
 			"types": "./dist/types/brand.d.ts"
+		},
+		"./coll": {
+			"import": "./dist/coll.js",
+			"require": "./dist/coll.cjs",
+			"types": "./dist/types/coll.d.ts"
 		},
 		"./cookie": {
 			"import": "./dist/cookie.js",
@@ -47,60 +57,15 @@
 			"require": "./dist/env.cjs",
 			"types": "./dist/types/env.d.ts"
 		},
-		"./http": {
-			"import": "./dist/http.js",
-			"require": "./dist/http.cjs",
-			"types": "./dist/types/http.d.ts"
-		},
-		"./obj": {
-			"import": "./dist/obj.js",
-			"require": "./dist/obj.cjs",
-			"types": "./dist/types/obj.d.ts"
-		},
-		"./react": {
-			"import": "./dist/react.js",
-			"require": "./dist/react.cjs",
-			"types": "./dist/types/react.d.ts"
-		},
-		"./str": {
-			"import": "./dist/str.js",
-			"require": "./dist/str.cjs",
-			"types": "./dist/types/str.d.ts"
-		},
-		"./time": {
-			"import": "./dist/time.js",
-			"require": "./dist/time.cjs",
-			"types": "./dist/types/time.d.ts"
-		},
-		"./url": {
-			"import": "./dist/url.js",
-			"require": "./dist/url.cjs",
-			"types": "./dist/types/url.d.ts"
-		},
-		"./mm": {
-			"import": "./dist/mm.js",
-			"require": "./dist/mm.cjs",
-			"types": "./dist/types/mm.d.ts"
-		},
-		"./lodash": {
-			"import": "./dist/lodash.js",
-			"require": "./dist/lodash.cjs",
-			"types": "./dist/types/lodash.d.ts"
-		},
-		"./arr": {
-			"import": "./dist/arr.js",
-			"require": "./dist/arr.cjs",
-			"types": "./dist/types/arr.d.ts"
-		},
-		"./coll": {
-			"import": "./dist/coll.js",
-			"require": "./dist/coll.cjs",
-			"types": "./dist/types/coll.d.ts"
-		},
 		"./fn": {
 			"import": "./dist/fn.js",
 			"require": "./dist/fn.cjs",
 			"types": "./dist/types/fn.d.ts"
+		},
+		"./http": {
+			"import": "./dist/http.js",
+			"require": "./dist/http.cjs",
+			"types": "./dist/types/http.d.ts"
 		},
 		"./is": {
 			"import": "./dist/is.js",
@@ -112,15 +77,40 @@
 			"require": "./dist/math.cjs",
 			"types": "./dist/types/math.d.ts"
 		},
+		"./mm": {
+			"import": "./dist/mm.js",
+			"require": "./dist/mm.cjs",
+			"types": "./dist/types/mm.d.ts"
+		},
 		"./num": {
 			"import": "./dist/num.js",
 			"require": "./dist/num.cjs",
 			"types": "./dist/types/num.d.ts"
 		},
+		"./obj": {
+			"import": "./dist/obj.js",
+			"require": "./dist/obj.cjs",
+			"types": "./dist/types/obj.d.ts"
+		},
+		"./react": {
+			"import": "./dist/react.js",
+			"require": "./dist/react.cjs",
+			"types": "./dist/types/react.d.ts"
+		},
 		"./seq": {
 			"import": "./dist/seq.js",
 			"require": "./dist/seq.cjs",
 			"types": "./dist/types/seq.d.ts"
+		},
+		"./str": {
+			"import": "./dist/str.js",
+			"require": "./dist/str.cjs",
+			"types": "./dist/types/str.d.ts"
+		},
+		"./time": {
+			"import": "./dist/time.js",
+			"require": "./dist/time.cjs",
+			"types": "./dist/types/time.d.ts"
 		},
 		"./to": {
 			"import": "./dist/to.js",
@@ -131,6 +121,56 @@
 			"import": "./dist/u.js",
 			"require": "./dist/u.cjs",
 			"types": "./dist/types/u.d.ts"
+		},
+		"./url": {
+			"import": "./dist/url.js",
+			"require": "./dist/url.cjs",
+			"types": "./dist/types/url.d.ts"
+		},
+		"./cln": {
+			"import": "./dist/cln.js",
+			"require": "./dist/cln.cjs",
+			"types": "./dist/types/cln.d.ts"
+		},
+		"./type": {
+			"import": "./dist/type.js",
+			"require": "./dist/type.cjs",
+			"types": "./dist/types/type.d.ts"
+		},
+		"./dec": {
+			"import": "./dist/dec.js",
+			"require": "./dist/dec.cjs",
+			"types": "./dist/types/dec.d.ts"
+		},
+		"./objp": {
+			"import": "./dist/objp.js",
+			"require": "./dist/objp.cjs",
+			"types": "./dist/types/objp.d.ts"
+		},
+		"./path": {
+			"import": "./dist/path.js",
+			"require": "./dist/path.cjs",
+			"types": "./dist/types/path.d.ts"
+		},
+		"./obp": {
+			"import": "./dist/obp.js",
+			"require": "./dist/obp.cjs",
+			"types": "./dist/types/obp.d.ts"
+		},
+		"./moize": {
+			"import": "./dist/moize.js",
+			"require": "./dist/moize.cjs",
+			"types": "./dist/types/moize.d.ts"
+		},
+		"./class": {
+			"import": "./dist/class.js",
+			"require": "./dist/class.cjs",
+			"types": "./dist/types/class.d.ts"
+		},
+		"./version": {
+			"import": "./dist/version.js",
+			"require": "./dist/version.cjs",
+			"types": "./dist/types/version.d.ts"
 		}
 	},
 	"sideEffects": ["./src/*.{html,scss,ts,tsx}"],
@@ -147,30 +187,29 @@
 	"dependencies": {},
 	"peerDependencies": {
 		"crypto-js": "^4.1.1",
+		"dayjs": "^1.11.7",
+		"fast-equals": "^4.0.3",
 		"ignore": "^5.2.4",
-		"locutus": "^2.0.16",
-		"lodash": "^4.17.21",
-		"merge-change": "npm:@clevercanyon/merge-change.fork@^1.8.49",
 		"micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.29",
+		"moize": "^6.1.5",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"semver": "^7.3.8"
 	},
 	"peerDependenciesMeta": {},
 	"optionalDependencies": {},
 	"bundleDependencies": [],
 	"devDependencies": {
-		"@clevercanyon/skeleton-dev-deps": "^1.0.121",
-		"@cloudflare/workers-types": "^4.20230115.0",
+		"@clevercanyon/skeleton-dev-deps": "^1.0.127",
+		"@cloudflare/workers-types": "^4.20230221.0",
 		"@types/crypto-js": "^4.1.1",
-		"@types/locutus": "^0.0.6",
-		"@types/lodash": "^4.14.191",
 		"@types/micromatch": "^4.0.2",
-		"@types/node": "^18.11.19",
-		"@types/react": "^18.0.27",
-		"@types/react-dom": "^18.0.10"
+		"@types/node": "^18.14.1",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"@types/semver": "^7.3.13"
 	},
 	"overrides": {},
-	"workspaces": [],
 	"cpu": ["x64", "arm64"],
 	"os": ["darwin", "linux"],
 	"engines": {
