Project update. [p][robotic]

--- a/.npmignore
+++ b/.npmignore
@@ -7,6 +7,10 @@
 #
 #     $ npm pack --dry-run
 #
+# Please keep in mind that if `files` is used in `./package.json`,
+# the `files` setting will **not** be altered by an `./.npmignore` in the
+# main project directory. In such a case, `./.npmignore` is meaningless.
+#
 # @note CUSTOM EDITS ONLY PLEASE!
 # @note In the future this file will be updated automatically.
 # @note Only `<custom:start.../custom:end>` will be preserved below.
@@ -59,7 +63,7 @@
 *.code-workspace
 
 # Dists (must exclude).
-# May contain `APP_` env vars.
+# May contain APP_ env vars.
 
 dist
 
